<resources>
    <string name="app_name">Quiz App</string>
    <string name="lets_start_the_quiz">Lets Start The Quiz</string>
    <string name="what_is_your_name">What is your name</string>
    <string name="start">Start</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="welcome_to_java_quiz">WELCOME TO JAVA QUIZ</string>
    <string name="javaimage">javaimage</string>
    <string name="welcome">WELCOME,</string>
    <string name="q1_in_an_instance_method_or_a_constructor_this_is_a_reference_to_the_current_object">Q1.In an instance method or a constructor, thisis a reference to the current object.</string>
</resources>